# hexournal

./: README  TODO  cabal.project  gdk_gdkframeclockidle.c.patch  hexournal.cabal
etc/: apply-file-license-header.pl  file-license-header.txt
src/: HeXournal.hs  Main.hs  argp.c  compile.txt  gc.c  main.c  my_perl.c  my_perl.h
src/C/: hexournal.c
src/HeXournal/: .UI.hs.swp  Config.hs  Controller.hs  Core.hs  Main.hs  Model.hs  UI.hs  View.hs
src/View/: Makefile  crop  crop.c
