cabal-version:      3.4
name:               hexournal
version:            0.20210430

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Johnson He
maintainer:         hejohns@umich.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG
    README

library
    hs-source-dirs:   src
    exposed-modules:  HeXournal
                      HeXournal.Core
                      HeXournal.UI
    build-depends:    base ^>=4.14.0.0
                     ,haskell-gi-base
                     ,gi-gtk >=4
                     ,gi-gdk
                     ,gi-cairo
                     ,gi-cairo-render >=0.1.0
                     ,gi-cairo-connector
                     ,mtl
    default-language: Haskell2010
    ghc-options:       -Wall
                       -O2

executable hexournal
    hs-source-dirs:   src
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
                     ,haskell-gi-base
                     ,gi-gtk >=4
                     ,gi-cairo
                     ,gi-cairo-render
                     ,gi-cairo-connector
                     ,hexournal
                     ,mtl
    default-language: Haskell2010
    ghc-options:       -Wall
                       -threaded
                       -with-rtsopts=-N
                       -O2
